# SimpleWhisper

./: CLAUDE.md  README.md
src/: .gitignore  AudioManager.py  GlobalHotkeyManager.py  HotkeySettingsWindow.py  MainWindow.py  SettingsManager.py  SettingsWindow.py  UIConstants.py  UIStateManager.py  WhisperManager.py  main.py  pyproject.toml  sound_file_writer.py
